--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,18 @@
-.App {
+.title{
+  align-items: center;
   text-align: center;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+
+}
+
+.main{
+  margin: 9rem;
+  padding: 0.5rem;
+
+}
+
+.header-main{
+  margin: 0;
+  padding: 0.5rem;
 }
